修改docker 构建问题

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -1,3 +1,22 @@
+# WebMap
+# -
+# https://github.com/Rev3rseSecurity/WebMap
+# Rev3rse Security: https://www.youtube.com/rev3rsesecurity
+# Author: theMiddle
+# -
+# Usage:
+#   $ cd /opt
+#   $ git clone https://github.com/javajeans/nmapreport.git
+#   $ cd WebMap/docker
+#   $ docker build -t webmap:latest .
+#   $ docker run -d -v /opt/WebMap/docker/xml:/opt/xml -p 8000:8000 webmap:latest
+#
+# Nmap Example:
+#   $ nmap -sT -A -oX /tmp/myscan.xml 192.168.1.0/24
+#   $ mv /tmp/myscan.xml /opt/WebMap/docker/xml
+#
+# Now you can point your browser to http://localhost:8000
+
 FROM ubuntu:latest
 
 ENV DEBIAN_FRONTEND noninteractive
@@ -11,12 +30,12 @@ RUN mkdir /opt/xml && mkdir /opt/notes && \
 
 RUN pip3 install Django requests xmltodict && \
     cd /opt/ && django-admin startproject nmapdashboard && cd /opt/nmapdashboard && \
-    git clone https://github.com/javajeans/nmapreport.git && \
+    git clone https://github.com/javajeans/nmapreport.git nmapreport && \
     cd nmapreport
 
 COPY settings.py /opt/nmapdashboard/nmapdashboard/
 COPY urls.py /opt/nmapdashboard/nmapdashboard/
-COPY vimrc /root/.vimrc
+# COPY vimrc /root/.vimrc
 COPY tzdata.sh /root/tzdata.sh
 COPY startup.sh /startup.sh
 
